# mrayGStreamerUnity

./: .gitignore  GStreamerPlugin.unitypackage  GStreamerUnityPlugin.sln  LICENSE  README.md  StreamTest.txt
.github/: FUNDING.yml
GStreamerUnityPlugin/: CMySink.cpp  CMySrc.cpp  CMyUDPSrc.cpp  CMyUDPSrc.h  CoreAPI.cpp  CoreAPI.h  GStreamerCore.cpp  GStreamerCore.h  GStreamerUnityPlugin.vcxproj  GStreamerUnityPlugin.vcxproj.filters  GstCustomVideoPlayer.cpp  GstCustomVideoPlayer.h  GstCustomVideoStreamer.cpp  GstCustomVideoStreamer.h  GstNetworkAudioPlayer.cpp  GstNetworkAudioPlayer.h  GstNetworkMultipleVideoPlayer.cpp  GstNetworkMultipleVideoPlayer.h  GstNetworkVideoPlayer.cpp  GstNetworkVideoPlayer.h  GstPipelineHandler.cpp  GstPipelineHandler.h  PlayersAPI.cpp  PlayersAPI.h  StreamersAPI.cpp  StreamersAPI.h  UnityHelpers.cpp  UnityHelpers.h  UnityImageGrabber.cpp  UnityImageGrabber.h  UnityPlugin.h  VideoAppSinkHandler.cpp  VideoAppSinkHandler.h
GStreamerUnityPlugin/Includes/: INetwork.h  ISingleton.h  IThreadFunction.h  IThreadManager.cpp  IUDPClient.h  IVideoGrabber.h  ImageInfo.cpp  ImageInfo.h  ListenerContainer.h  NetAddress.cpp  NetAddress.h  UnityGraphicsDevice.cpp  Win32Network.h  WinThread.h  WinThreadManager.cpp  WinThreadManager.h
GStreamerUnityPlugin/Includes/old/: PixelUtil.h  videoCommon.h
GStreamerUnityPlugin/old/: VideoAppSinkHandler.cpp  VideoAppSinkHandler.h
GStreamerUnityPlugin/old_2/: GstNetworkMultipleVideoPlayer.cpp
Plugin/: CMakeLists.txt  buildmac.sh
Plugin/Android/: .env  Android.mk  Application.mk  build.bat  build.sh  build4DockerToolbox.sh
Plugin/Android/Renderer/: Android - Copy.mk  Android.mk  Application - Copy.mk
Plugin/Android/docker/: Dockerfile  docker-compose-toolbox.yml  docker-compose.yml  install.sh
Plugin/Android/docker/entrypoint/: commands.sh  docker-entrypoint.sh
Plugin/Android/gst-build-armeabi-v7a/: gstreamer_android.c
Plugin/Android/jni/: Android.mk  Application.mk
Plugin/Android/mrayGST/: AndroidManifest.xml
Plugin/Android/mrayGST/jni/: Android.mk  Application.mk
Plugin/VS/: .gitignore  GStreamerUnityPlugin.sln  GStreamerUnityPlugin.vcxproj  GStreamerUnityPlugin.vcxproj.filters  GstCustomVideoStreamer.cpp  RenderUnityPlugin.vcxproj  RenderUnityPlugin.vcxproj.filters
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/: project.pbxproj
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/project.xcworkspace/xcuserdata/avatarin.xcuserdatad/: UserInterfaceState.xcuserstate
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/project.xcworkspace/xcuserdata/yamen.s.xcuserdatad/: UserInterfaceState.xcuserstate
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/project.xcworkspace/xcuserdata/yamen.s.xcuserdatad/xcdebugger/: Expressions.xcexplist
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/xcuserdata/avatarin.xcuserdatad/xcschemes/: xcschememanagement.plist
Plugin/XCode/GStreamerUnityPlugin.xcodeproj/xcuserdata/yamen.s.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Plugin/includes/: GraphicsInclude.h  GstCustomDataReceiver.h  IMutex.h  ISingleton.h  IThread.h  IThreadManager.h  ImageInfo.cpp  ImageInfo.h  ListenerContainer.h  MutexLocks.h  NetAddress.cpp  PixelUtil.cpp  PixelUtil.h  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_Metal.mm  RenderAPI_OpenGL2.cpp  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp  UnityGraphicsDevice.cpp  common.h  videoCommon.h
Plugin/includes/Android/: AndroidMutex.cpp  AndroidMutex.h  AndroidThread.cpp  AndroidThread.h  AndroidThreadManager.cpp  AndroidThreadManager.h
Plugin/includes/OSX/: OSXMutex.cpp  OSXMutex.h  OSXThread.cpp  OSXThread.h  OSXThreadManager.cpp  OSXThreadManager.h
Plugin/includes/Unity/: IUnityGraphics.h  IUnityInterface.h
Plugin/includes/Win32/: Win32Network.cpp  Win32Network.h  Win32UDPClient.cpp  Win32UDPClient.h  WinMutex.cpp  WinMutex.h  WinThread.cpp
Plugin/includes/old/: PixelUtil.cpp
Plugin/includes/zlib/: zconf.h
Plugin/sources/: AudioAppSinkHandler.cpp  AudioAppSinkHandler.h  CMyListener.cpp  CMyListener.h  CMySink.h  CMySrc.cpp  CMySrc.h  CMyUDPSink.cpp  CMyUDPSink.h  CMyUDPSrc.cpp  CMyUDPSrc.h  CoreAPI.cpp  CoreAPI.h  CustomAudioGrabber.cpp  CustomAudioGrabber.h  DirectSoundInputStream.cpp  DirectSoundInputStream.h  DirectSoundOutputStream.cpp  DirectSoundOutputStream.h  GStreamerCore.cpp  GStreamerCore.h  GZipCompress.cpp  GZipCompress.h  GstAppAudioPlayer.cpp  GstAppAudioPlayer.h  GstAppNetAudioStreamer.cpp  GstAppNetAudioStreamer.h  GstAudioSampler.cpp  GstAudioSampler.h  GstCustomDataPlayer.cpp  GstCustomDataPlayer.h  GstCustomDataReceiver.cpp  GstCustomDataStreamer.cpp  GstCustomDataStreamer.h  GstCustomVideoPlayer.cpp  GstCustomVideoPlayer.h  GstCustomVideoStreamer.cpp  GstCustomVideoStreamer.h  GstNetworkAudioPlayer.cpp  GstNetworkAudioPlayer.h  (+42 more)
Plugin/sources/old/: GstCustomVideoPlayer.h  GstNetworkVideoPlayer.cpp  GstNetworkVideoPlayer.h  IGStreamerPlayer.h
Plugin/sources/old_2/: GstNetworkMultipleVideoPlayer.h
Render Plugin/Android/: build.bat  cleanup.bat
Render Plugin/Android/GStreamer/: Android.mk  build.bat  cleanup.bat
Render Plugin/Android/jni/: Android.mk  Application.mk
Render Plugin/VS/: RenderUnityPlugin.sln  RenderUnityPlugin.vcxproj  RenderUnityPlugin.vcxproj.filters
Render Plugin/XCode/: ASimplePlugin-Info.plist
Render Plugin/includes/: ImageInfo.cpp  PixelUtil.cpp  PixelUtil.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_D3D9.cpp  RenderAPI_Metal.mm  RenderAPI_OpenGLCoreES.cpp  UnityGraphicsDevice.h  videoCommon.h
Render Plugin/lib/: zlib.lib
Render Plugin/sources/: PlayersAPI.cpp  PlayersAPI.h  UnityHelpers.cpp
Unity/UnityTests/: GStreamerLog.txt
Unity/UnityTests/Assets/Resources/: BlitMtrl.mat  RedMtrl.mat  SimpleChromakey.shader  WhiteMtrl.mat
Unity/UnityTests/Assets/Scenes/: CubeMaterial.mat  Test 0.unity  (+6 more)
Unity/UnityTests/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  UnityConnectSettings.asset  VFXManager.asset
Unity/UnityTests/UserSettings/: EditorUserSettings.asset
(+42 files in other folders)
